# DengJia_ws

chassis_sim/: CMakeLists.txt  package.xml
chassis_sim/src/: NodeChassis.cpp  NodeDynamic.cpp  chassis_sim.ini
data_plot/: package.xml  setup.py
data_plot/csv_recorder/: 000.py
data_plot/data_plot/: data_record.ini  node_data_plot.py  node_error_plot.py  node_record_csv.py
learning_gazebo/: setup.py
learning_gazebo/launch/: mbot.launch.py  self_load_urdf_into_gazebo.launch.py
learning_gazebo/meshes/test/: test_left_front_wheel_link.STL
learning_gazebo/rviz/: self_test.rviz
learning_gazebo/urdf/: mbot_base_ego.xacro  mbot_ego.xacro
learning_gazebo/urdf/temp_test/: mbot_base_gazebo.xacro  test2.xacro
learning_gazebo/worlds/: hills.world  hills2.world
module_controller/: CMakeLists.txt  package.xml
module_controller/src/: controller_lat_ESO_lqr.cpp  controller_lat_ESO_lqr.hpp  controller_lat_lqr.cpp  controller_lat_lqr.hpp  controller_main.cpp  module_controller.ini
module_controller/src/math/: controller_base.hpp  lqr_solver.cpp  lqr_solver.hpp  trajectory_analysis.cpp  trajectory_analysis.hpp  ultis_math.cpp  ultis_math.hpp
module_planner/: CMakeLists.txt  package.xml
module_planner/src/: module_planner.ini
module_planner/src/planner/: test_planner.cpp
module_planner/src/planner/common/: cartesian_frenet_conversion.cpp  cartesian_frenet_conversion.hpp  common.cpp  common.hpp  referenceline.cpp  referenceline.hpp  self_OSQP.cpp  self_OSQP.hpp  traj_OSQP.cpp  traj_OSQP.hpp  traj_sampling.cpp  traj_sampling.hpp  traj_self.cpp  traj_self.hpp  ultis_math.cpp  ultis_math.hpp
module_planner/src/planner/local_grid_map/: grid_map_node.cpp
module_planner/src/planner/tf/: odom2local.cpp
module_planner/src/visualization/: NodeEgotoMarker.cpp  NodeReadtxtAndPublish.cpp  NodeTrajtoMarker.cpp
self_interface/: CMakeLists.txt  package.xml
self_interface/msg/: ChassisCmd.msg  ControlError.msg  EgoStatus.msg  PlannerTraj.msg  PlannerTrajPoint.msg
self_launch/: package.xml  setup.cfg  setup.py
self_launch/launch/: rviz.launch.py  sim_dynamic.launch.py  sim_gazebo.launch.py
self_launch/rviz/: self_test.rviz
way_network/: CMakeLists.txt  package.xml
way_network/WayPoints/: waypoints.txt  waypoints_1.txt
way_network/WayPoints/test/: input.xml  output.txt  test.py
way_network/src/: NodeWaypoints.cpp
